--- a/.github/actions/package/action.yml
+++ b/.github/actions/package/action.yml
@@ -23,12 +23,6 @@ runs:
          New-Item -ItemType Directory -Force -Path ./publish/raw-${{ inputs.target }}
          New-Item -ItemType Directory -Force -Path ./publish/package-${{ inputs.target }}
       
-    # - name: Publish ${{ matrix.project }}
-    #   shell: pwsh
-    #   run: |
-    #       mv ./Directory.build.props ./Directory.Build.props
-    #       dotnet publish ./src/${{ matrix.project }}/${{ matrix.project }}.csproj -c ${{ needs.test.outputs.config }} -o $(Build.ArtifactStagingDirectory)/drop-${{ inputs.target }} -r ${{ inputs.target }} -f net8.0 --self-contained true -p:DebugType=None -p:DebugSymbols=false -p:GenerateRuntimeConfigurationFiles=false -p:PublishSingleFile=true
-
     - name: Publish zip packages
       shell: pwsh
       run: |
@@ -36,7 +30,6 @@ runs:
         foreach ($project in $projects) {
            
             $version = "v1.0.0"
-            # New-Item -ItemType Directory -Force -Path ./publish/drop-${{ inputs.target }}
             $csprojFile = "${{ inputs.path }}/$project/$project.csproj"
 
             [xml]$csprojContent = Get-Content -Path $csprojFile
@@ -53,7 +46,7 @@ runs:
               exit 1
             }
                
-           dotnet publish $csprojFile --configuration Debug -f net8.0 --output ./publish/drop-${{ inputs.target }} /p:DebugType=None /p:DebugSymbols=false #--self-contained true -p:DebugType=None -p:DebugSymbols=false -p:GenerateRuntimeConfigurationFiles=false -p:PublishSingleFile=true #--no-build /p:DebugType=None /p:DebugSymbols=false
+           dotnet publish $csprojFile --configuration Debug -f net8.0 --output ./publish/drop-${{ inputs.target }} -r -${{ inputs.target }} --self-contained true  /p:DebugType=None /p:DebugSymbols=false 
            Move-Item -Path ./publish/drop-${{ inputs.target }}/$project* -Destination ./publish/raw-${{ inputs.target }}/
         }
        
@@ -74,5 +67,5 @@ runs:
     - name: Upload v2 Package
       uses: actions/upload-artifact@v4
       with:
-        name: package-v2-${{ inputs.target }}
+        name: package-${{ inputs.target }}
         path: ./publish/package-${{ inputs.target }}
