--- a/.github/actions/package/action.yml
+++ b/.github/actions/package/action.yml
@@ -46,7 +46,7 @@ runs:
               exit 1
             }
                
-           dotnet publish $csprojFile --configuration Debug -f net8.0 --output ./publish/drop-${{ inputs.target }} -r -${{ inputs.target }} --self-contained true  /p:DebugType=None /p:DebugSymbols=false 
+           dotnet publish $csprojFile --configuration Debug -f net8.0 --output ./publish/drop-${{ inputs.target }} -r ${{ inputs.target }} --self-contained true -p:DebugType=None -p:DebugSymbols=false -p:GenerateRuntimeConfigurationFiles=false -p:PublishSingleFile=true
            Move-Item -Path ./publish/drop-${{ inputs.target }}/$project* -Destination ./publish/raw-${{ inputs.target }}/
         }
        
