--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -92,7 +92,7 @@ jobs:
            New-Item -ItemType Directory -Force -Path ./publish/raw-${{ matrix.target }}
            dotnet publish src/$project1/$project1.csproj --configuration  ${{ steps.set-config.outputs.config }} -f net8.0 --output ./publish/drop-${{ matrix.target }} -r ${{ matrix.target }} --self-contained true -p:DebugType=None -p:DebugSymbols=false -p:GenerateRuntimeConfigurationFiles=false -p:PublishSingleFile=true
            dotnet publish src/$project2/$project2.csproj --configuration  ${{ steps.set-config.outputs.config }} -f net8.0 --output ./publish/drop-${{ matrix.target }} -r ${{ matrix.target }} --self-contained true -p:DebugType=None -p:DebugSymbols=false -p:GenerateRuntimeConfigurationFiles=false -p:PublishSingleFile=true
-           Move-Item -Path ./publish/matrix-${{ inputs.target }}/$project1* -Destination ./publish/raw-${{ matrix.target }}/
+           Move-Item -Path ./publish/matrix-${{ matrix.target }}/$project1* -Destination ./publish/raw-${{ matrix.target }}/
         
       - uses: ./.github/actions/version
         id: set-version
