--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -86,13 +86,16 @@ jobs:
     
       - name: Copy executables
         shell: pwsh
+        id: copy-executables
         run: |
            $project1 = "fiskaltrust.Launcher"
            $project2 = "fiskaltrust.LauncherUpdater"
+           $path = "./publish/raw-${{ matrix.target }}/"
+           echo "path=$path" >> $env:GITHUB_OUTPUT
            New-Item -ItemType Directory -Force -Path ./publish/raw-${{ matrix.target }}
            dotnet publish src/$project1/$project1.csproj --configuration  ${{ steps.set-config.outputs.config }} -f net8.0 --output ./publish/drop-${{ matrix.target }} -r ${{ matrix.target }} --self-contained true -p:DebugType=None -p:DebugSymbols=false -p:GenerateRuntimeConfigurationFiles=false -p:PublishSingleFile=true
            dotnet publish src/$project2/$project2.csproj --configuration  ${{ steps.set-config.outputs.config }} -f net8.0 --output ./publish/drop-${{ matrix.target }} -r ${{ matrix.target }} --self-contained true -p:DebugType=None -p:DebugSymbols=false -p:GenerateRuntimeConfigurationFiles=false -p:PublishSingleFile=true
-           Move-Item -Path ./publish/matrix-${{ matrix.target }}/$project1* -Destination ./publish/raw-${{ matrix.target }}/
+           Move-Item -Path ./publish/drop-${{ matrix.target }}/$project1* -Destination $path
         
       - uses: ./.github/actions/version
         id: set-version
@@ -103,7 +106,7 @@ jobs:
 
       - uses: ./.github/actions/zip
         with:
-          path: ./publish/raw-${{ matrix.target }}/
+          path: ${{ steps.copy-executables.outputs.path }}
           vmImage : ${{ matrix.vmImage }}
           packageName : "fiskaltrust.Launcher-${{ steps.set-version.outputs.version }}"
           artifactName: "package-${{ matrix.target }}"
