--- a/.github/actions/version/action.yml
+++ b/.github/actions/version/action.yml
@@ -7,7 +7,11 @@ inputs:
   project:
     required: true
     type: string
-  
+
+outputs:
+  version:
+    description: "The generated package version"
+
 runs:
   using: "composite"
   steps:
