--- a/.github/actions/zip/action.yml
+++ b/.github/actions/zip/action.yml
@@ -38,7 +38,7 @@ runs:
         $hash = Get-FileHash $destinationFile -Algorithm SHA256
         $hashbytes = $hash.Hash -split '([A-F0-9]{2})' | foreach-object { if ($_) {[System.Convert]::ToByte($_,16)}}
         $hashstring = [System.Convert]::ToBase64String($hashbytes)
-        $hashstring | Set-Content $destinationFile.hash
+        $hashstring | Set-Content ${destinationFile}.hash
         ls $destinationPath
 
     - name: Upload v2 Package
