--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -108,8 +108,8 @@ jobs:
       - uses: ./.github/actions/zip
         with:
           path: ${{ steps.copy-executables.outputs.path }}
-          vmImage : ${{ matrix.vmImage }}
-          zipFileName : "fiskaltrust.Launcher-${{ steps.set-version.outputs.version }}"
+          vmImage : ${{ matrix.vmImage }} 
+          zipFileName : "fiskaltrust.Launcher" #-${{ steps.set-version.outputs.version }}"
           artifactName: "package-${{ matrix.target }}"
 
 
