--- a/.github/actions/zip/action.yml
+++ b/.github/actions/zip/action.yml
@@ -42,4 +42,4 @@ runs:
       uses: actions/upload-artifact@v4
       with:
         name: ${{ inputs.artifactName }}
-        path: $destinationPath
+        path: ./publish/${{ inputs.artifactName }}
