--- a/.github/actions/version/action.yml
+++ b/.github/actions/version/action.yml
@@ -11,6 +11,7 @@ inputs:
 outputs:
   version:
     description: "The generated package version"
+    value: ${{ steps.set-version.outputs.version }}
 
 runs:
   using: "composite"
@@ -20,6 +21,7 @@ runs:
       shell: pwsh
 
     - name: set version
+      id: set-version
       shell: pwsh
       run: |
         $version = "v1.0.0"
