--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -31,25 +31,25 @@ jobs:
             target: win-x64
             scriptFolder: 'windows'
 
-          # - vmImage: windows-latest
-          #   target: win-x86
-          #   scriptFolder: 'windows'
+          - vmImage: windows-latest
+            target: win-x86
+            scriptFolder: 'windows'
 
-          # - vmImage: ubuntu-latest
-          #   target: linux-x64
-          #   scriptFolder: 'linux'
+          - vmImage: ubuntu-latest
+            target: linux-x64
+            scriptFolder: 'linux'
 
-          # - vmImage: ubuntu-latest
-          #   target: linux-arm
-          #   scriptFolder: 'linux'
+          - vmImage: ubuntu-latest
+            target: linux-arm
+            scriptFolder: 'linux'
 
-          # - vmImage: ubuntu-latest
-          #   target: linux-arm64
-          #   scriptFolder: 'linux'
+          - vmImage: ubuntu-latest
+            target: linux-arm64
+            scriptFolder: 'linux'
 
-          # - vmImage: macos-latest
-          #   target: osx-x64
-          #   scriptFolder: 'macos'
+          - vmImage: macos-latest
+            target: osx-x64
+            scriptFolder: 'macos'
    
     runs-on: ${{ matrix.vmImage }}
 
@@ -97,19 +97,18 @@ jobs:
            dotnet publish src/$project1/$project1.csproj --configuration  ${{ steps.set-config.outputs.config }} -f net8.0 --output ./publish/drop-${{ matrix.target }} -r ${{ matrix.target }} --self-contained true -p:DebugType=None -p:DebugSymbols=false -p:GenerateRuntimeConfigurationFiles=false -p:PublishSingleFile=true
            dotnet publish src/$project2/$project2.csproj --configuration  ${{ steps.set-config.outputs.config }} -f net8.0 --output ./publish/drop-${{ matrix.target }} -r ${{ matrix.target }} --self-contained true -p:DebugType=None -p:DebugSymbols=false -p:GenerateRuntimeConfigurationFiles=false -p:PublishSingleFile=true
            Move-Item -Path ./publish/drop-$target/${project1}* -Destination $path
-        
+          
       - uses: ./.github/actions/version
         id: set-version
         with:
           project: fiskaltrust.Launcher
-          path: src
-          vmImage : ${{ matrix.vmImage }}
+          path: src          
 
       - uses: ./.github/actions/zip
         with:
           path: ${{ steps.copy-executables.outputs.path }}
           vmImage : ${{ matrix.vmImage }} 
-          zipFileName : "fiskaltrust.Launcher" #-${{ steps.set-version.outputs.version }}"
+          zipFileName : "fiskaltrust.Launcher-${{ steps.set-version.outputs.version }}"
           artifactName: "package-${{ matrix.target }}"
 
 
