--- a/.github/actions/zip/action.yml
+++ b/.github/actions/zip/action.yml
@@ -33,8 +33,8 @@ runs:
          $escapedZipPath = $destinationPath -replace '\\', '/'
          $temp = "${{ inputs.artifactName }}"
          $escapedZipDir = [System.IO.Path]::GetDirectoryName($escapedZipPath)
-         #bash -c "mkdir -p '${escapedZipDir}' && cd '${{ inputs.path }}' && zip -r ../$temp/ ."
-         bash -c "mkdir -p '${escapedZipDir}' && cd '${{ inputs.path }}' && zip -r '${escapedZipPath}' ."
+         bash -c "cd '${{ inputs.path }}' && zip -r ../$temp/$zipFileName ."
+         #bash -c "mkdir -p '${escapedZipDir}' && cd '${{ inputs.path }}' && zip -r '${escapedZipPath}' ."
         }
 
         $hash = Get-FileHash $destinationFile -Algorithm SHA256
