--- a/.github/actions/zip/action.yml
+++ b/.github/actions/zip/action.yml
@@ -41,7 +41,7 @@ runs:
         $hashbytes = $hash.Hash -split '([A-F0-9]{2})' | foreach-object { if ($_) {[System.Convert]::ToByte($_,16)}}
         $hashstring = [System.Convert]::ToBase64String($hashbytes)
         $hashstring | Set-Content "$destinationFile.hash"
-        echo "destinationPath=${$destinationPath}" >> $env:GITHUB_OUTPUT   
+        echo "destinationPath=$destinationPath" >> $env:GITHUB_OUTPUT   
         ls $destinationPath
 
     - name: Upload Package
