--- a/.github/actions/zip/action.yml
+++ b/.github/actions/zip/action.yml
@@ -31,9 +31,9 @@ runs:
           Compress-Archive -Path (Join-Path ${{ inputs.path }} *) -DestinationPath $destinationFile
         } else {
          $escapedZipPath = $destinationPath -replace '\\', '/'
-         $temp = "${{ inputs.artifactName }}"
+         $temp = "./publish/${{ inputs.artifactName }}/"
          $escapedZipDir = [System.IO.Path]::GetDirectoryName($escapedZipPath)
-         bash -c "cd '${{ inputs.path }}' && zip -r ../$temp/${zipFileName}.zip ."
+         bash -c "cd '${{ inputs.path }}' && zip -r $temp/${zipFileName}.zip ."
          #bash -c "mkdir -p '${escapedZipDir}' && cd '${{ inputs.path }}' && zip -r '${escapedZipPath}' ."
         }
 
