--- a/.github/actions/zip/action.yml
+++ b/.github/actions/zip/action.yml
@@ -20,31 +20,35 @@ runs:
     - name: create zip packages
       shell: pwsh
       id: create-zip
-      run: |       
-        $destinationDir = "./publish/${{ inputs.artifactName }}/" 
-        New-Item -ItemType Directory -Force -Path $destinationDir
+      run: | 
+        $artifactName = "${{ inputs.artifactName }}"
+        $sourcePath = "${{ inputs.path }}"
         $zipFileName = "${{ inputs.zipFileName }}"
-        $destinationFile = Join-Path $destinationDir "$zipFileName.zip"
+        $vmImage = "${{ inputs.vmImage }}" 
+        
+        $destinationPath = "./publish/$artifactName/" 
+        New-Item -ItemType Directory -Force -Path $destinationPath
+        $destinationFile = Join-Path $destinationPath "$zipFileName.zip"
 
-        $vmImage = "${{ inputs.vmImage }}"
         if($vmImage.StartsWith("windows")) {
           Compress-Archive -Path (Join-Path ${{ inputs.path }} *) -DestinationPath $destinationFile
-        } else {
-         $sourcePathUnix = "${{ inputs.path }}" -replace '\\', '/'
-         bash -c "cd '$sourcePathUnix' && zip -r $zipFileName.zip ."
-         bash -c "mv '$sourcePathUnix/${zipFileName}.zip' '$destinationDir'"    
-             
+        } 
+        else 
+        {
+         bash -c "cd '$sourcePath' && zip -r $zipFileName.zip ."
+         bash -c "mv '$sourcePath/${zipFileName}.zip' '$destinationPath'"                
         }
 
         $hash = Get-FileHash $destinationFile -Algorithm SHA256
         $hashbytes = $hash.Hash -split '([A-F0-9]{2})' | foreach-object { if ($_) {[System.Convert]::ToByte($_,16)}}
         $hashstring = [System.Convert]::ToBase64String($hashbytes)
         $hashstring | Set-Content "$destinationFile.hash"
-        echo "destinationDir=$destinationDir" >> $env:GITHUB_OUTPUT   
-        ls $destinationDir
+
+        echo "destinationPath=$destinationPath" >> $env:GITHUB_OUTPUT   
+        ls $destinationPath
 
     - name: Upload Package
       uses: actions/upload-artifact@v4
       with:
         name: ${{ inputs.artifactName }}
-        path: ${{ steps.create-zip.outputs.destinationDir }}
+        path: ${{ steps.create-zip.outputs.destinatioPath }}
