--- a/.github/actions/version/action.yml
+++ b/.github/actions/version/action.yml
@@ -24,7 +24,7 @@ runs:
       id: set-version
       shell: pwsh
       run: |
-        $version = "v1.0.0"
+        $version = ""
         $csprojFile = "${{ inputs.path }}/${{ inputs.project }}/${{ inputs.project }}.csproj"
 
         [xml]$csprojContent = Get-Content -Path $csprojFile
