--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -112,6 +112,15 @@ jobs:
           zipFileName : "fiskaltrust.Launcher-${{ steps.set-version.outputs.version }}"
           artifactName: "package-${{ matrix.target }}"
       
+      - name: Copy README.md to scripts artifacts
+        shell: pwsh
+        run: |
+          Copy-Item -Path ./README.md -Destination "./scripts/${{ matrix.scriptFolder }}/README.md"
+          $readmePath = "./scripts/${{ matrix.scriptFolder }}/README.md"
+          $readmeContent = Get-Content $readmePath -Raw
+          $updatedContent = $readmeContent -replace '(?s)<!-- BEGIN (CONTRIBUTING|LICENSE) -->.*?<!-- END (CONTRIBUTING|LICENSE) -->\s*', ''
+          $updatedContent | Set-Content $readmePath
+           
       - uses: ./.github/actions/zip
         with:
           path: ./scripts/${{ matrix.scriptFolder }}/
